[package]
name = "buh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
enum-map = "2.6.3"
git2 = "0.18.1"
strum = "0.25.0"
strum_macros = "0.25.2"
